Integrating with API

--- a/src/templates/inbox-message-youtube.html
+++ b/src/templates/inbox-message-youtube.html
@@ -1,10 +1,12 @@
-<a href="${cta}" onclick="Gist.markMessageAsRead('${queueId}')">
-    <div class="message">
-        <div class="message-body">
-            <div class="message-image">
-                <iframe src="${media}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-            <div class="message-text">${text}</div>
+<div class="message">
+    <div class="message-body">
+        <div class="bin" onclick="Gist.markMessageAsRead('${queueId}')">&nbsp;</div>
+        <div class="message-image">
+            <iframe src="${media}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
+        <a href="${cta}">
+            <div class="message-title">${title}</div>
+            <div class="message-desc">${description}</div>
+        </a>
     </div>
-</a>
+</div>
