--- a/src/templates/inbox-message-image.html
+++ b/src/templates/inbox-message-image.html
@@ -1,10 +1,12 @@
-<a href="${cta}" onclick="Gist.markMessageAsRead('${queueId}')">
-    <div class="message">
-        <div class="message-body">
-            <div class="message-image">
-                <img src="${media}" />
-            </div>
-            <div class="message-text">${text}</div>
+<div class="message">
+    <div class="message-body">
+        <div class="bin" onclick="Gist.markMessageAsRead('${queueId}')">&nbsp;</div>
+        <div class="message-image">
+            <img src="${media}" />
         </div>
+        <a href="${cta}">
+            <div class="message-title">${title}</div>
+            <div class="message-desc">${description}</div>
+        </a>
     </div>
-<a>
+</div>
