--- a/src/templates/inbox-message.html
+++ b/src/templates/inbox-message.html
@@ -1,9 +1,9 @@
 <div class="message">
     <div class="message-body">
-        <div class="bin" onclick="Gist.markMessageAsRead('${queueId}')">&nbsp;</div>
-        <a href="${cta}">
-            <div class="message-title">${title}</div>
-            <div class="message-desc">${description}</div>
+        <div class="bin" onclick="Gist.markInboxMessageAsRead('{queueId}')">&nbsp;</div>
+        <a href="#" onclick="Gist.performInboxMessageAction('{queueId}', '{cta}')">
+            <div class="message-title">{title}</div>
+            <div class="message-desc">{description}</div>
         </a>
     </div>
 </div>
