--- a/src/templates/inbox.html
+++ b/src/templates/inbox.html
@@ -31,7 +31,6 @@
         display: none;
         position: fixed;
         right: 20px;
-        bottom: 20px;
         background-color: #ffffff;
         max-width: 340px;
         border: 1px solid #dcdcdc;
@@ -129,7 +128,7 @@
         padding-top: 2px;
       }
     </style>
-    <div id="gist-inbox-component" onclick="Gist.showMessageInboxComponent()">
+    <div id="gist-inbox-component">
         <div class="bubble">
             <svg width="448" height="512" viewBox="0 0 448 512" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_225_2)">
